# basketballs

./: .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  BUILD  MODULE.bazel  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pipeline.yml
common/utils/: BUILD  datasets.py  utils.py
components/: __init__.py  cache.py  config.py  main.py  package.json  run_pipeline.py  video_reader.py
components/actions/: __init__.py  ball_possession.py  passes.py
components/ball_detector/: detector.py  heatmap_visualizer.py  model.py  visualize.py
components/classes/: classes.py
components/common/: distances.py  logger.py
components/configs/: main.yaml
components/court_detector/: BUILD  annotation_tool.py  benchmark.py  benchmark_results  court_constants.py  court_detector.py  court_tracking.py  court_tracking_old.py  geometry.py  homography.py  model.py  panoraming.py  prepare_dataset.py  trainer.py  visualizer.py
components/detector/: BUILD  __init__.py  detector.py  detector_learning.ipynb  detector_metrics.py  detector_metrics_coco.py  detector_model.py  detector_rfdetr.py  enrich.py  interpolate_ball_detections.py  number_recognizer.py  number_recognizer_parseq.py  pose_detector.py  remove_bad_ball_detections.py  train_model.py  visualize_detection.py  visualize_detection_rfdetr.py  visualize_detection_yolo.py
components/flattener/: court_saver.py  flattener.py
components/kalmanlib/: __init__.py  kalmanlib.py
components/reidentification/: __init__.py  dataset.py  evaluate.py  extract.py  losses.py  model.py  trainer.py
components/segmentation/: __init__.py  train.py
dataset/: BUILD  download.py
mock/: BUILD  mock.cpp  mock.h
mock/tests/: BUILD  (+1 more)
tools/: format_cpp.sh  format_python.sh
visualization/: BUILD  visualize.py
(+147 files in other folders)
